--- a/examples/oscoap-cooja/Makefile
+++ b/examples/oscoap-cooja/Makefile
@@ -28,6 +28,7 @@ SMALL=1
 # REST Engine shall use Erbium CoAP implementation
 APPS += er-oscoap
 APPS += rest-engine
+APPS += powertrace
 
 # optional rules to get assembly
 #CUSTOM_RULE_C_TO_OBJECTDIR_O = 1
